add rename file

--- a/blogs/source/_posts/windows/播放器推荐.md
+++ b/blogs/source/_posts/windows/播放器推荐.md
@@ -27,6 +27,10 @@ Potplayer 是一款非常好用的Windows视频播放软件，尤其是你对颜
 
 鼠标在播放器中间右击按照如图所示操作即可设置跳略播放
 ![](1.PNG)
+设置播放速度:
+![](2.PNG)
+![](3.PNG)
+
 
 ## **射手影音(SPlayer)**
 
