--- a/blogs/source/_posts/reference/k8s/00.开篇词-打通“容器技术”的任督二脉.md
+++ b/blogs/source/_posts/reference/k8s/00.开篇词-打通“容器技术”的任督二脉.md
@@ -6,8 +6,7 @@ categories:
 - k8s
 ---
 
-
-你好，我是张磊，Kubernetes 社区的一位资深成员和项目维护者。
+![](1.jpg)
 
 2012 年，我还在浙大读书的时候，就有幸组建了一个云计算与 PaaS 基础设施相关的科研团队，就这样，我从早期的 Cloud Foundry 社区开始，正式与容器结缘。
 
