--- a/blogs/source/_posts/reference/k8s/01.预习篇-小鲸鱼大事记(一)初出茅庐.md
+++ b/blogs/source/_posts/reference/k8s/01.预习篇-小鲸鱼大事记(一)初出茅庐.md
@@ -6,8 +6,7 @@ categories:
 - k8s
 ---
 
-
-你好，我是张磊。我今天分享的主题是：小鲸鱼大事记之初出茅庐。
+![](1.jpg)
 
 如果我问你，现今最热门的服务器端技术是什么？想必你不假思索就能回答上来：当然是容器！可是，如果现在不是 2018 年而是 2013 年，你的回答还能这么斩钉截铁么？
 
