--- a/blogs/source/_posts/reference/k8s/02.预习篇-小鲸鱼大事记(二)崭露头角.md
+++ b/blogs/source/_posts/reference/k8s/02.预习篇-小鲸鱼大事记(二)崭露头角.md
@@ -6,7 +6,7 @@ categories:
 - k8s
 ---
 
-你好，我是张磊。我今天分享的主题是：小鲸鱼大事记之崭露头角。
+![](1.jpg)
 
 在上一篇文章中，我说到，伴随着 PaaS 概念的逐步普及，以 Cloud Foundry 为代表的经典 PaaS 项目，开始进入基础设施领域的视野，平台化和 PaaS 化成了这个生态中的一个最为重要的进化趋势。
 
