--- a/blogs/source/_posts/reference/k8s/03.预习篇-小鲸鱼大事记(三)群雄并起.md
+++ b/blogs/source/_posts/reference/k8s/03.预习篇-小鲸鱼大事记(三)群雄并起.md
@@ -6,7 +6,7 @@ categories:
 - k8s
 ---
 
-你好，我是张磊。我今天分享的主题是：小鲸鱼大事记之群雄并起。
+![](1.jpg)
 
 在上一篇文章中，我剖析了 Docker 项目迅速走红背后的技术与非技术原因，也介绍了 Docker 公司开启平台化战略的野心。可是，Docker 公司为什么在 Docker 项目已经取得巨大成功之后，却执意要重新走回那条已经让无数先驱们尘沙折戟的 PaaS 之路呢？
 
