--- a/blogs/source/_posts/reference/k8s/04.预习篇-小鲸鱼大事记(四)尘埃落定.md
+++ b/blogs/source/_posts/reference/k8s/04.预习篇-小鲸鱼大事记(四)尘埃落定.md
@@ -6,6 +6,8 @@ categories:
 - k8s
 ---
 
+![](1.jpg)
+
 在上一次的分享中我提到，伴随着 Docker 公司一手打造出来的容器技术生态在云计算市场中站稳了脚跟，围绕着 Docker 项目进行的各个层次的集成与创新产品，也如雨后春笋般出现在这个新兴市场当中。而 Docker 公司，不失时机地发布了 Docker Compose、Swarm 和 Machine“三件套”，在重新定义 PaaS 的方向上走出了最关键的一步。
 
 这段时间，也正是 Docker 生态创业公司们的春天，大量围绕着 Docker 项目的网络、存储、监控、CI/CD，甚至 UI 项目纷纷出台，也涌现出了很多 Rancher、Tutum 这样在开源与商业上均取得了巨大成功的创业公司。
