--- a/blogs/source/_posts/reference/k8s/05.白话容器基础(一)从进程说开去.md
+++ b/blogs/source/_posts/reference/k8s/05.白话容器基础(一)从进程说开去.md
@@ -6,6 +6,8 @@ categories:
 - k8s
 ---
 
+![](2.jpg)
+
 在前面的 4 篇预习文章中，我梳理了“容器”这项技术的来龙去脉，通过这些内容，我希望你能理解如下几个事实：
 
  * 容器技术的兴起源于 PaaS 技术的普及；
@@ -15,7 +17,7 @@ categories:
 
 >容器本身没有价值，有价值的是“容器编排”。
 
-也正因为如此，容器技术生态才爆发了一场关于“容器编排”的“战争”。`而这次战争，最终以 Kubernetes 项目和 CNCF 社区的胜利而告终。`所以，这个专栏后面的内容，我会以 Docker 和 Kubernetes 项目为核心，为你详细介绍容器技术的各项实践与其中的原理。
+也正因为如此，容器技术生态才爆发了一场关于“容器编排”的“战争”。**`而这次战争，最终以 Kubernetes 项目和 CNCF 社区的胜利而告终。`**所以，这个专栏后面的内容，我会以 Docker 和 Kubernetes 项目为核心，为你详细介绍容器技术的各项实践与其中的原理。
 
 不过在此之前，你还需要搞清楚一个更为基础的问题：
 
