--- a/blogs/source/_posts/reference/k8s/10.Kubernetes一键部署利器kubeadm.md
+++ b/blogs/source/_posts/reference/k8s/10.Kubernetes一键部署利器kubeadm.md
@@ -105,10 +105,10 @@ kubeadm 为 Kubernetes 项目生成的证书文件都放在 Master 节点的 /et
 
 此外，用户使用 kubectl 获取容器日志等 streaming 操作时**`(kubectl的操作需要双向认证)`**，需要通过 kube-apiserver 向 kubelet 发起请求，这个连接也必须是安全的。kubeadm 为这一步生成的是 apiserver-kubelet-client.crt 文件，对应的私钥是 apiserver-kubelet-client.key。
 
-除此之外，Kubernetes 集群中还有 Aggregate APIServer 等特性，也需要用到专门的证书，这里我就不再一一列举了。需要指出的是，你可以选择不让 kubeadm 为你生成这些证书，而是拷贝现有的证书到如下证书的目录里：
+除此之外，Kubernetes 集群中还有 Aggregate APIServer 等特性，也需要用到专门的证书，这里我就不再一一列举了。**`需要指出的是，你可以选择不让 kubeadm 为你生成这些证书，而是拷贝现有的证书到如下证书的目录里:`**
 
 	/etc/kubernetes/pki/ca.{crt,key}
-这时，kubeadm 就会跳过证书生成的步骤，把它完全交给用户处理。
+**`这时，kubeadm 就会跳过证书生成的步骤，把它完全交给用户处理。`**
 
 **`三. 证书生成后，kubeadm 接下来会为其他组件生成访问 kube-apiserver 所需的配置文件。这些文件的路径是：/etc/kubernetes/xxx.conf：`**
 
