add c++ shared_ptr learn and greenplum remote linked

--- a/blogs/source/_posts/language/cpp/STL/03.shared_ptr.md
+++ b/blogs/source/_posts/language/cpp/STL/03.shared_ptr.md
@@ -8,6 +8,10 @@ categories:
 
 ## shared_ptr
 
+Reference Link: https://jingyan.baidu.com/article/adc81513d2c217f723bf7327.html
+
+### 实例1
+
 	#include <iostream>
 	#include <memory>
 	
@@ -40,4 +44,71 @@ categories:
 	
 	    return 0;
 	}
+
+### 实例2
+
+	#include <iostream>
+	#include <cstring>
+	#include <memory>
+	
+	using namespace std;
+	
+	int main()
+	{
+	    char* str = (char *)"Hello";
+	    cout << "strlen of str:" << strlen(str) << endl;
+	    cout << "size   of str:" << sizeof(str) << endl;
+	    char* s = new char[strlen(str) + 1];
+	    s = str;
+	    cout << s << endl;
+	
+	    std::shared_ptr<char> ptr(new char[strlen(str) + 1](), [](char *p) { delete [] p; });
+	
+	    // 第一种, 字符串给shared_ptr赋值
+	    for (int i = 0; i < strlen(str); i++)
+	    {
+	        *(ptr.get() + i) = str[i];
+	    }
+	
+	    // 第二种, 字符串给shared_ptr赋值
+	    strcpy(ptr.get(), str);
+	
+	    // 第一种, 输出字符串
+	    cout << ptr << endl;
+	
+	    // 第二种, 输出字符串
+	    cout << ptr.get() << endl;
+	
+	    // 第三种, 输出字符串
+	    for (int i = 0; i < strlen(str); i++)
+	    {
+	        cout << *(ptr.get() + i) << " ";
+	    }
+	    cout << endl;
+	
+	    // 输出一个字符
+	    cout << *str << "," << *ptr << "," << *ptr.get() << endl;
+	
+	    std::shared_ptr<int> p1 = std::make_shared<int>();
+	    *p1 = 78;
+	    cout << "p1=" << *p1 << endl;
+	
+	    return 0;
+	}
+
+**编译**
+
+	g++ tt.cpp
+
+**输出**
+
+	[root@laboratory test]# ./a.out
+	strlen of str:5
+	size   of str:8
+	Hello
+	Hello
+	Hello
+	H e l l o
+	H,H,H
+	p1=78
 
