--- a/blogs/source/_posts/reference/k8s/26.基于角色的权限控制：RBAC.md
+++ b/blogs/source/_posts/reference/k8s/26.基于角色的权限控制：RBAC.md
@@ -24,7 +24,7 @@ categories:
 
 我们知道，Kubernetes 中所有的 API 对象，都保存在 Etcd 里。可是，对这些 API 对象的操作，却一定都是通过访问 kube-apiserver 实现的。其中一个非常重要的原因，就是你需要 APIServer 来帮助你做授权工作。
 
-而在 Kubernetes 项目中，负责完成授权（Authorization）工作的机制，就是 RBAC：基于角色的访问控制（Role-Based Access Control）。
+而在 **Kubernetes 项目中，负责完成授权（Authorization）工作的机制，就是 RBAC：基于角色的访问控制（Role-Based Access Control）。**
 
 如果你直接查看 Kubernetes 项目中关于 RBAC 的文档的话，可能会感觉非常复杂。但实际上，等到你用到这些 RBAC 的细节时，再去查阅也不迟。
 
@@ -37,7 +37,7 @@ categories:
 
 而这三个概念，其实就是整个 RBAC 体系的核心所在。
 
-我先来讲解一下 Role。
+**`我先来讲解一下 Role。`**
 
 实际上，Role 本身就是一个 Kubernetes 的 API 对象，定义如下所示：
 
@@ -60,7 +60,7 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 
 然后，这个 Role 对象的 rules 字段，就是它所定义的权限规则。在上面的例子里，这条规则的含义就是：允许“被作用者”，对 mynamespace 下面的 Pod 对象，进行 GET、WATCH 和 LIST 操作。
 
-那么，这个具体的“被作用者”又是如何指定的呢？这就需要通过 RoleBinding 来实现了。
+那么，**`这个具体的“被作用者”又是如何指定的呢？这就需要通过 RoleBinding 来实现了。`**
 
 当然，RoleBinding 本身也是一个 Kubernetes 的 API 对象。它的定义如下所示：
 
@@ -85,7 +85,7 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 
 实际上，Kubernetes 里的“User”，也就是“用户”，只是一个授权系统里的逻辑概念。它需要通过外部认证服务，比如 Keystone，来提供。或者，你也可以直接给 APIServer 指定一个用户名、密码文件。那么 Kubernetes 的授权系统，就能够从这个文件里找到对应的“用户”了。当然，在大多数私有的使用环境中，我们只要使用 Kubernetes 提供的内置“用户”，就足够了。这部分知识，我后面马上会讲到。
 
-接下来，我们会看到一个 roleRef 字段。正是通过这个字段，`RoleBinding 对象就可以直接通过名字，来引用我们前面定义的 Role 对象（example-role），从而定义了“被作用者（Subject）”和“角色（Role）”之间的绑定关系。`
+接下来，我们会看到一个 roleRef 字段。正是通过这个字段，**`RoleBinding 对象就可以直接通过名字，来引用我们前面定义的 Role 对象（example-role），从而定义了“被作用者（Subject）”和“角色（Role）”之间的绑定关系。`**
 
 需要再次提醒的是，Role 和 RoleBinding 对象都是 Namespaced 对象（Namespaced Object），它们对权限的限制规则仅在它们自己的 Namespace 内有效，roleRef 也只能引用当前 Namespace 里的 Role 对象。
 
@@ -133,11 +133,11 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 
 而正如我前面介绍过的，在大多数时候，我们其实都不太使用“用户”这个功能，而是直接使用 Kubernetes 里的“内置用户”。
 
-`这个由 Kubernetes 负责管理的“内置用户”，正是我们前面曾经提到过的：ServiceAccount。`
+**`这个由 Kubernetes 负责管理的“内置用户”，正是我们前面曾经提到过的：ServiceAccount。`**
 
 接下来，我通过一个具体的实例来为你讲解一下为 ServiceAccount 分配权限的过程。
 
-首先，我们要定义一个 ServiceAccount。它的 API 对象非常简单，如下所示：
+**首先，我们要定义一个 ServiceAccount。**它的 API 对象非常简单，如下所示：
 
 	apiVersion: v1
 	kind: ServiceAccount
@@ -181,9 +181,9 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 	    ...
 	  secrets:
 	  - name: example-sa-token-vmfg6
-可以看到，Kubernetes 会为一个 ServiceAccount 自动创建并分配一个 Secret 对象，即：上述 ServiceAcount 定义里最下面的 secrets 字段。
+可以看到，**`Kubernetes 会为一个 ServiceAccount 自动创建并分配一个 Secret 对象，即：上述 ServiceAcount 定义里最下面的 secrets 字段。`**
 
-这个 Secret，就是这个 ServiceAccount 对应的、用来跟 APIServer 进行交互的授权文件，我们一般称它为：Token。Token 文件的内容一般是证书或者密码，它以一个 Secret 对象的方式保存在 Etcd 当中。
+**`这个 Secret，就是这个 ServiceAccount 对应的、用来跟 APIServer 进行交互的授权文件，我们一般称它为：Token。Token 文件的内容一般是证书或者密码，它以一个 Secret 对象的方式保存在 Etcd 当中。`**
 
 这时候，用户的 Pod，就可以声明使用这个 ServiceAccount 了，比如下面这个例子：
 
@@ -199,7 +199,7 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 	  serviceAccountName: example-sa
 在这个例子里，我定义了 Pod 要使用的要使用的 ServiceAccount 的名字是：example-sa。
 
-等这个 Pod 运行起来之后，我们就可以看到，该 ServiceAccount 的 token，也就是一个 Secret 对象，被 Kubernetes 自动挂载到了容器的 /var/run/secrets/kubernetes.io/serviceaccount 目录下，如下所示：
+**`等这个 Pod 运行起来之后，我们就可以看到，该 ServiceAccount 的 token，也就是一个 Secret 对象，被 Kubernetes 自动挂载到了容器的 /var/run/secrets/kubernetes.io/serviceaccount 目录下，`**如下所示：
 
 	$ kubectl describe pod sa-token-test -n mynamespace
 	Name:               sa-token-test
@@ -247,11 +247,11 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 	ca.crt:     1025 bytes
 	namespace:  7 bytes
 	token:      <TOKEN数据>
-可以看到，Kubernetes 会自动为默认 ServiceAccount 创建并绑定一个特殊的 Secret：它的类型是kubernetes.io/service-account-token；它的 Annotation 字段，声明了kubernetes.io/service-account.name=default，即这个 Secret 会跟同一 Namespace 下名叫 default 的 ServiceAccount 进行绑定。
+可以看到，Kubernetes 会自动为默认 ServiceAccount 创建并绑定一个特殊的 **`Secret：`** 它的类型是kubernetes.io/service-account-token；**`它的 Annotation 字段，声明了kubernetes.io/service-account.name=default，即这个 Secret 会跟同一 Namespace 下名叫 default 的 ServiceAccount 进行绑定。`**
 
-所以，在生产环境中，我强烈建议你为所有 Namespace 下的默认 ServiceAccount，绑定一个只读权限的 Role。这个具体怎么做，就当作思考题留给你了。
+**`所以，在生产环境中，我强烈建议你为所有 Namespace 下的默认 ServiceAccount，绑定一个只读权限的 Role。`**这个具体怎么做，就当作思考题留给你了。
 
-除了前面使用的“用户”（User），Kubernetes 还拥有“用户组”（Group）的概念，也就是一组“用户”的意思。如果你为 Kubernetes 配置了外部认证服务的话，这个“用户组”的概念就会由外部认证服务提供。
+除了前面使用的“用户”（User），**`Kubernetes 还拥有“用户组”（Group）的概念，也就是一组“用户”的意思。`**如果你为 Kubernetes 配置了外部认证服务的话，这个“用户组”的概念就会由外部认证服务提供。
 
 而对于 Kubernetes 的内置“用户”ServiceAccount 来说，上述“用户组”的概念也同样适用。
 
@@ -279,7 +279,7 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 	  apiGroup: rbac.authorization.k8s.io
 就意味着这个 Role 的权限规则，作用于整个系统里的所有 ServiceAccount。
 
-最后，值得一提的是，在 **`Kubernetes 中已经内置了很多个为系统保留的 ClusterRole，它们的名字都以 system: 开头`**。你可以通过 kubectl get clusterroles 查看到它们。
+最后，值得一提的是，在 **`Kubernetes 中已经内置了很多个为系统保留的 ClusterRole，它们的名字都以 system: 开头。你可以通过 kubectl get clusterroles 查看到它们。`**
 
 一般来说，这些系统 ClusterRole，是绑定给 Kubernetes 系统组件对应的 ServiceAccount 使用的。
 
@@ -335,4 +335,17 @@ Namespace 是 Kubernetes 项目里的一个逻辑管理单位。不同 Namespace
 **思考题**
 
 请问，如何为所有 Namespace 下的默认 ServiceAccount（default ServiceAccount），绑定一个只读权限的 Role 呢？请你提供 ClusterRoleBinding（或者 RoleBinding）的 YAML 文件
+
+
+	kind: ClusterRoleBinding
+	apiVersion: rbac.authorization.k8s.io/v1
+	metadata:
+	  name: readonly-all-default
+	subjects:
+	- kind: ServiceAccount
+	  name: system.serviceaccount.default  // 或者name直接写default，不指定namespace
+	roleRef:
+	  kind: ClusterRole
+	  name: view
+	  apiGroup: rbac.authorization.k8s.io
 
