add helm introduction and k8s problems encounter

--- a/blogs/source/_posts/reference/k8s/27.聪明的微创新：Operator工作原理解读.md
+++ b/blogs/source/_posts/reference/k8s/27.聪明的微创新：Operator工作原理解读.md
@@ -108,7 +108,7 @@ Etcd Operator 的使用方法非常简单，只需要两步即可完成：
 	example-etcd-cluster-dp8nqtjznc   1/1       Running     0          1m
 	example-etcd-cluster-mbzlg6sd56   1/1       Running     0          2m
 	example-etcd-cluster-v6v6s6stxd   1/1       Running     0          2m
-那么，究竟发生了什么，让创建一个 Etcd 集群的工作如此简单呢？
+那么，`究竟发生了什么，让创建一个 Etcd 集群的工作如此简单呢？`
 
 我们当然还是得从这个 example-etcd-cluster.yaml 文件开始说起。
 
@@ -127,11 +127,11 @@ Etcd Operator 的使用方法非常简单，只需要两步即可完成：
 
 看到这里，相信你应该已经对 Operator 有了一个初步的认知：
 
-Operator 的工作原理，实际上是利用了 Kubernetes 的自定义 API 资源（CRD），来描述我们想要部署的“有状态应用”；然后在自定义控制器里，根据自定义 API 对象的变化，来完成具体的部署和运维工作。
+**Operator 的工作原理，实际上是利用了 Kubernetes 的自定义 API 资源（CRD），来描述我们想要部署的“有状态应用”；然后在自定义控制器里，根据自定义 API 对象的变化，来完成具体的部署和运维工作。**
 
 所以，编写一个 Etcd Operator，与我们前面编写一个自定义控制器的过程，没什么不同。
 
-不过，考虑到你可能还不太清楚Etcd 集群的组建方式，我在这里先简单介绍一下这部分知识。
+不过，考虑到你可能还不太清楚`Etcd 集群的组建方式`，我在这里先简单介绍一下这部分知识。
 
 **Etcd Operator 部署 Etcd 集群，采用的是静态集群（Static）的方式。**
 
@@ -266,7 +266,7 @@ Size 字段的存在，就意味着将来如果我们想要调整集群大小的
 
 所以，以此类推，不断地将 infra2 等后续成员添加到集群中，直到整个集群的节点数目等于用户指定的 size 之后，部署就完成了。
 
-在熟悉了这个部署思路之后，我再为你讲解Etcd Operator 的工作原理，就非常简单了。
+在熟悉了这个部署思路之后，我再为你讲解`Etcd Operator 的工作原理`，就非常简单了。
 
 跟所有的自定义控制器一样，Etcd Operator 的启动流程也是围绕着 Informer 展开的，如下所示：
 
@@ -291,9 +291,9 @@ Size 字段的存在，就意味着将来如果我们想要调整集群大小的
 	 // TODO: use workqueue to avoid blocking
 	 informer.Run(ctx.Done())
 	}
-可以看到，Etcd Operator 启动要做的第一件事（ c.initResource），是创建 EtcdCluster 对象所需要的 CRD，即：前面提到的etcdclusters.etcd.database.coreos.com。这样 Kubernetes 就能够“认识”EtcdCluster 这个自定义 API 资源了。
+可以看到，**Etcd Operator 启动要做的第一件事**（ c.initResource），是创建 EtcdCluster 对象所需要的 CRD，即：前面提到的etcdclusters.etcd.database.coreos.com。这样 Kubernetes 就能够“认识”EtcdCluster 这个自定义 API 资源了。
 
-而接下来，Etcd Operator 会定义一个 EtcdCluster 对象的 Informer。
+而**接下来，Etcd Operator 会定义一个 EtcdCluster 对象的 Informer。**
 
 不过，需要注意的是，由于 Etcd Operator 的完成时间相对较早，所以它里面有些代码的编写方式会跟我们之前讲解的最新的编写方式不太一样。在具体实践的时候，你还是应该以我讲解的模板为主。
 
@@ -394,17 +394,17 @@ Size 字段的存在，就意味着将来如果我们想要调整集群大小的
 
 如果对比一下 Etcd Operator 与我在第 20 篇文章《深入理解 StatefulSet（三）：有状态应用实践》中讲解过的 MySQL StatefulSet 的话，你可能会有两个问题。
 
-第一个问题是，在 StatefulSet 里，它为 Pod 创建的名字是带编号的，这样就把整个集群的拓扑状态固定了下来（比如：一个三节点的集群一定是由名叫 web-0、web-1 和 web-2 的三个 Pod 组成）。可是，在 Etcd Operator 里，为什么我们使用随机名字就可以了呢？
+**第一个问题是**，在 StatefulSet 里，它为 Pod 创建的名字是带编号的，这样就把整个集群的拓扑状态固定了下来（比如：一个三节点的集群一定是由名叫 web-0、web-1 和 web-2 的三个 Pod 组成）。可是，**在 Etcd Operator 里，为什么我们使用随机名字就可以了呢？**
 
 这是因为，Etcd Operator 在每次添加 Etcd 节点的时候，都会先执行 etcdctl member add <Pod 名字 >；每次删除节点的时候，则会执行 etcdctl member remove <Pod 名字 >。这些操作，其实就会更新 Etcd 内部维护的拓扑信息，所以 Etcd Operator 无需在集群外部通过编号来固定这个拓扑关系。
 
-第二个问题是，为什么我没有在 EtcdCluster 对象里声明 Persistent Volume？
+**第二个问题是，为什么我没有在 EtcdCluster 对象里声明 Persistent Volume？**
 
 难道，我们不担心节点宕机之后 Etcd 的数据会丢失吗？
 
 我们知道，Etcd 是一个基于 Raft 协议实现的高可用 Key-Value 存储。根据 Raft 协议的设计原则，当 Etcd 集群里只有半数以下（在我们的例子里，小于等于一个）的节点失效时，当前集群依然可以正常工作。此时，Etcd Operator 只需要通过控制循环创建出新的 Pod，然后将它们加入到现有集群里，就完成了“期望状态”与“实际状态”的调谐工作。这个集群，是一直可用的 。
 
-> 备注：关于 Etcd 的工作原理和 Raft 协议的设计思想，你可以阅读这篇文章来进行学习。
+> 备注：关于 [Etcd 的工作原理和 Raft 协议](http://www.infoq.com/cn/articles/etcd-interpretation-application-scenario-implement-principle)的设计思想，你可以阅读这篇文章来进行学习。
 
 但是，当这个 Etcd 集群里有半数以上（在我们的例子里，大于等于两个）的节点失效的时候，这个集群就会丧失数据写入的能力，从而进入“不可用”状态。此时，即使 Etcd Operator 创建出新的 Pod 出来，Etcd 集群本身也无法自动恢复起来。
 
@@ -446,7 +446,7 @@ Size 字段的存在，就意味着将来如果我们想要调整集群大小的
 	    -e 's|<etcd-cluster-endpoints>|"http://example-etcd-cluster-client:2379"|g' \
 	    example/etcd-backup-operator/backup_cr.yaml \
 	    | kubectl create -f -
-需要注意的是，每当你创建一个 EtcdBackup 对象（backup_cr.yaml），就相当于为它所指定的 Etcd 集群做了一次备份。EtcdBackup 对象的 etcdEndpoints 字段，会指定它要备份的 Etcd 集群的访问地址。
+需要注意的是，每当你创建一个 EtcdBackup 对象（[backup_cr.yaml](https://github.com/coreos/etcd-operator/blob/master/example/etcd-backup-operator/backup_cr.yaml)），就相当于为它所指定的 Etcd 集群做了一次备份。EtcdBackup 对象的 etcdEndpoints 字段，会指定它要备份的 Etcd 集群的访问地址。
 
 所以，在实际的环境里，我建议你把最后这个备份操作，编写成一个 Kubernetes 的 CronJob 以便定时运行。
 
@@ -481,9 +481,9 @@ EtcdBackup 和 EtcdRestore 这两个 Operator 的工作原理，与 Etcd Operato
 
 不过，如果我现在要部署的应用，既需要用 StatefulSet 的方式维持拓扑状态和存储状态，又有大量的编程工作要做，那我到底该如何选择呢？
 
-其实，Operator 和 StatefulSet 并不是竞争关系。你完全可以编写一个 Operator，然后在 Operator 的控制循环里创建和控制 StatefulSet 而不是 Pod。比如，业界知名的Prometheus 项目的 Operator，正是这么实现的。
+其实，Operator 和 StatefulSet 并不是竞争关系。你完全可以编写一个 Operator，然后在 Operator 的控制循环里创建和控制 StatefulSet 而不是 Pod。比如，业界知名的[Prometheus 项目的 Operator](https://github.com/prometheus-operator/prometheus-operator)，正是这么实现的。
 
-此外，CoreOS 公司在被 RedHat 公司收购之后，已经把 Operator 的编写过程封装成了一个叫作Operator SDK的工具（整个项目叫作 Operator Framework），它可以帮助你生成 Operator 的框架代码。感兴趣的话，你可以试用一下。
+此外，CoreOS 公司在被 RedHat 公司收购之后，已经把 Operator 的编写过程封装成了一个叫作[Operator SDK](https://github.com/operator-framework/operator-sdk)的工具（整个项目叫作 Operator Framework），它可以帮助你生成 Operator 的框架代码。感兴趣的话，你可以试用一下。
 
 **思考题**
 
