--- a/blogs/source/_posts/reference/k8s/29.PV、PVC体系是不是多此一举？从本地持久化卷谈起.md
+++ b/blogs/source/_posts/reference/k8s/29.PV、PVC体系是不是多此一举？从本地持久化卷谈起.md
@@ -16,7 +16,7 @@ categories:
 
 实际上，如果只是为了职责划分，PV、PVC 体系确实不见得比直接在 Pod 里声明 Volumes 字段有什么优势。
 
-不过，你有没有想过这样一个问题，如果Kubernetes 内置的 20 种持久化数据卷实现，都没办法满足你的容器存储需求时，该怎么办？
+不过，你有没有想过这样一个问题，如果[Kubernetes 内置的 20 种持久化数据卷实现](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#types-of-persistent-volumes)，都没办法满足你的容器存储需求时，该怎么办？
 
 这个情况乍一听起来有点不可思议。但实际上，凡是鼓捣过开源项目的读者应该都有所体会，“不能用”“不好用”“需要定制开发”，这才是落地开源基础设施项目的三大常态。
 
@@ -34,7 +34,7 @@ categories:
 
 接下来，我就为你深入讲解一下这个特性。
 
-不难想象，Local Persistent Volume 的设计，主要面临两个难点。
+不难想象，`Local Persistent Volume 的设计，主要面临两个难点。`
 
 **第一个难点在于**：如何把本地磁盘抽象成 PV。
 
