modify the arthicture of the blogs

--- a/blogs/source/_posts/language/nodejs/2.Windows10_Node.js_安装.md
+++ b/blogs/source/_posts/language/nodejs/2.Windows10_Node.js_安装.md
@@ -2,8 +2,10 @@
 title: 2.Windows10 Node.js 安装
 tags:
 categories:
+- language
 - nodejs
 ---
+
 <!-- date: 2020-01-06 13:50:12    //可以添加到上面-->
 
 ### 1. 下载node安装包(LTS版本) https://nodejs.org/en/  
