--- a/blogs/source/_posts/language/排序算法/比较算法之间的差异.md
+++ b/blogs/source/_posts/language/排序算法/比较算法之间的差异.md
@@ -7,7 +7,7 @@ categories:
 ---
 
 ## 速记方法
-插冒选希, 块堆并基
+插冒选希, 快堆并基
 
 | 排序方法 | 最好时间 | 平均时间 | 最坏时间 | 辅助存储 | 稳定性 | 备注 |
 | :-----: | :----- | :------: | :-----:| :-----: | :------: | :------: |
