add install chrome on centos, modify deploy blog

--- a/blogs/source/_posts/reference/k8s/40.Kubernetes的资源模型与资源管理.md
+++ b/blogs/source/_posts/reference/k8s/40.Kubernetes的资源模型与资源管理.md
@@ -11,7 +11,7 @@ categories:
 ## Kubernetes的资源模型与资源管理
 
 作为一个容器集群编排与管理项目，Kubernetes 为用户提供的基础设施能力，不仅包括了我在前面为你讲述的应用定义和描述的部分，还包括了对应用的资源管理和调度的处理。那么，从今天这篇文章开始，我就来为你详细讲解一下后面这部分内容。
-
+<!-- more -->
 `而作为 Kubernetes 的资源管理与调度部分的基础，我们要从它的资源模型开始说起。`
 
 我在前面的文章中已经提到过，在 Kubernetes 里，Pod 是最小的原子调度单位。这也就意味着，所有跟调度和资源管理相关的属性都应该是属于 Pod 对象的字段。而这其中最重要的部分，就是 Pod 的 CPU 和内存配置，如下所示：
