--- a/blogs/source/_posts/reference/k8s/41.十字路口上的Kubernetes默认调度器.md
+++ b/blogs/source/_posts/reference/k8s/41.十字路口上的Kubernetes默认调度器.md
@@ -11,7 +11,7 @@ categories:
 ## 十字路口上的Kubernetes默认调度器
 
 在上一篇文章中，我主要为你介绍了 Kubernetes 里关于资源模型和资源管理的设计方法。而在今天这篇文章中，我就来为你介绍一下 Kubernetes 的默认调度器（default scheduler）。
-
+<!-- more -->
 **在 Kubernetes 项目中，默认调度器的主要职责，就是为一个新创建出来的 Pod，寻找一个最合适的节点（Node）。**
 
 而这里“最合适”的含义，包括两层：
