--- a/blogs/source/_posts/reference/k8s/43.Kubernetes默认调度器的优先级与抢占机制.md
+++ b/blogs/source/_posts/reference/k8s/43.Kubernetes默认调度器的优先级与抢占机制.md
@@ -11,7 +11,7 @@ categories:
 ## Kubernetes默认调度器的优先级与抢占机制
 
 在上一篇文章中，我为你详细讲解了 Kubernetes 默认调度器的主要调度算法的工作原理。在本篇文章中，我再来为你讲解一下 Kubernetes 调度器里的另一个重要机制，即：优先级（Priority ）和抢占（Preemption）机制。
-
+<!-- more -->
 `首先需要明确的是，优先级和抢占机制，解决的是 Pod 调度失败时该怎么办的问题。`
 
 正常情况下，当一个 Pod 调度失败后，它就会被暂时“搁置”起来，直到 Pod 被更新，或者集群状态发生变化，调度器才会对这个 Pod 进行重新调度。
