--- a/blogs/source/_posts/reference/k8s/46.解读 CRI 与 容器运行时.md
+++ b/blogs/source/_posts/reference/k8s/46.解读 CRI 与 容器运行时.md
@@ -11,7 +11,7 @@ categories:
 ## 解读 CRI 与 容器运行时
 
 在上一篇文章中，我为你详细讲解了 kubelet 的工作原理和 CRI 的来龙去脉。在今天这篇文章中，我们就来进一步地、更深入地了解一下 CRI 的设计与工作原理。
-
+<!-- more -->
 首先，我们先来简要回顾一下有了 CRI 之后，Kubernetes 的架构图，如下所示。
 
 ![](2.png)
