--- a/blogs/source/_posts/reference/k8s/48.Prometheus、Metrics Server与Kubernetes监控体系.md
+++ b/blogs/source/_posts/reference/k8s/48.Prometheus、Metrics Server与Kubernetes监控体系.md
@@ -11,7 +11,7 @@ categories:
 ## Prometheus、Metrics Server与Kubernetes监控体系
 
 通过前面的文章，我已经和你分享过了 Kubernetes 的核心架构，编排概念，以及具体的设计与实现。接下来，我会用 3 篇文章，为你介绍 Kubernetes 监控相关的一些核心技术。
-
+<!-- more -->
 首先需要明确指出的是，Kubernetes 项目的监控体系曾经非常繁杂，在社区中也有很多方案。但这套体系发展到今天，已经完全演变成了以 Prometheus 项目为核心的一套统一的方案。
 
 在这里，可能有一些同学对 Prometheus 项目还太不熟悉。所以，我先来简单为你介绍一下这个项目。
