--- a/blogs/source/_posts/reference/k8s/49.Custom Metrics让Auto Scaling不再“食之无味”.md
+++ b/blogs/source/_posts/reference/k8s/49.Custom Metrics让Auto Scaling不再“食之无味”.md
@@ -11,7 +11,7 @@ categories:
 ## Custom Metrics让Auto Scaling不再食之无味
 
 在上一篇文章中，我为你详细讲述了 Kubernetes 里的核心监控体系的架构。不难看到，Prometheus 项目在其中占据了最为核心的位置。
-
+<!-- more -->
 实际上，借助上述监控体系，Kubernetes 就可以为你提供一种非常有用的能力，那就是 Custom Metrics，自定义监控指标。
 
 在过去的很多 PaaS 项目中，其实都有一种叫作 Auto Scaling，即自动水平扩展的功能。只不过，这个功能往往只能依据某种指定的资源类型执行水平扩展，比如 CPU 或者 Memory 的使用值。
