--- a/blogs/source/_posts/reference/k8s/50.让日志无处可逃：容器日志收集与管理.md
+++ b/blogs/source/_posts/reference/k8s/50.让日志无处可逃：容器日志收集与管理.md
@@ -11,7 +11,7 @@ categories:
 ## 让日志无处可逃：容器日志收集与管理
 
 在前面的文章中，我为你详细讲解了 Kubernetes 的核心监控体系和自定义监控体系的设计与实现思路。而在本篇文章里，我就来为你详细介绍一下 Kubernetes 里关于容器日志的处理方式。
-
+<!-- more -->
 首先需要明确的是，Kubernetes 里面对容器日志的处理方式，都叫作 cluster-level-logging，即：这个日志处理系统，与容器、Pod 以及 Node 的生命周期都是完全无关的。这种设计当然是为了保证，无论是容器挂了、Pod 被删除，甚至节点宕机的时候，应用的日志依然可以被正常获取到。
 
 而对于一个容器来说，当应用把日志输出到 stdout 和 stderr 之后，容器项目在默认情况下就会把这些日志输出到宿主机上的一个 JSON 文件里。这样，你通过 kubectl logs 命令就可以看到这些容器的日志了。
