--- a/blogs/source/_posts/reference/k8s/52.答疑：在问题中解决问题，在思考中产生思考.md
+++ b/blogs/source/_posts/reference/k8s/52.答疑：在问题中解决问题，在思考中产生思考.md
@@ -11,7 +11,7 @@ categories:
 ## 在问题中解决问题，在思考中产生思考
 
 **问题 1：**你是否知道如何修复容器中的 top 指令以及 /proc 文件系统中的信息呢？（提示：lxcfs）
-
+<!-- more -->
 其实，这个问题的答案在提示里其实已经给出了，即 lxcfs 方案。通过 lxcfs，你可以把宿主机的 /var/lib/lxcfs/proc 文件系统挂载到 Docker 容器的 /proc 目录下。使得容器中进程读取相应文件内容时，实际上会从容器对应的 Cgroups 中读取正确的资源限制。 从而得到正确的 top 命令的返回值。
 
 问题选自第 6 篇文章《白话容器基础（二）：隔离与限制》。
