--- a/blogs/source/_posts/reference/k8s/53.特别放送2019年，容器技术生态会发生些什么.md
+++ b/blogs/source/_posts/reference/k8s/53.特别放送2019年，容器技术生态会发生些什么.md
@@ -11,7 +11,7 @@ categories:
 ## 特别放送 | 2019 年，容器技术生态会发生些什么？
 
 虽然“深入剖析 Kubernetes”专栏已经更新结束了，但我仍在挂念着每一个订阅专栏的“你”，也希望能多和你分享一些我的观点和看法，希望对你有所帮助。今天我和你分享的主题是：2019 年，容器技术生态会发生些什么。
-
+<!-- more -->
 **1. Kubernetes 项目被采纳度将持续增长**
 
 作为“云原生”（Cloud Native）理念落地的核心，Kubernetes 项目已经成为了构建容器化平台体系的默认选择。但是，不同于一个只能生产资源的集群管理工具，**Kubernetes 项目最大的价值，乃在于它从一开始就提倡的声明式 API 和以此为基础“控制器”模式。**
