--- a/blogs/source/_posts/reference/k8s/39.谈谈Service与Ingress.md
+++ b/blogs/source/_posts/reference/k8s/39.谈谈Service与Ingress.md
@@ -11,7 +11,7 @@ categories:
 ## 谈谈Service与Ingress
 
 在上一篇文章中，我为你详细讲解了将 Service 暴露给外界的三种方法。其中有一个叫作 LoadBalancer 类型的 Service，它会为你在 Cloud Provider（比如：Google Cloud 或者 OpenStack）里创建一个与该 Service 对应的负载均衡服务。
-
+<!-- more -->
 但是，相信你也应该能感受到，由于每个 Service 都要有一个负载均衡服务，所以这个做法实际上既浪费成本又高。作为用户，我其实更希望看到 Kubernetes 为我内置一个全局的负载均衡器。然后，通过我访问的 URL，把请求转发给不同的后端 Service。
 
 **这种全局的、为了代理不同后端 Service 而设置的负载均衡服务，就是 Kubernetes 里的 Ingress 服务。**
