--- a/blogs/source/_posts/reference/k8s/42.Kubernetes默认调度器调度策略解析.md
+++ b/blogs/source/_posts/reference/k8s/42.Kubernetes默认调度器调度策略解析.md
@@ -11,7 +11,7 @@ categories:
 ## Kubernetes默认调度器调度策略解析
 
 在上一篇文章中，我主要为你讲解了 Kubernetes 默认调度器的设计原理和架构。在今天这篇文章中，我们就专注在调度过程中 Predicates 和 Priorities 这两个调度策略主要发生作用的阶段。
-
+<!-- more -->
 `首先，我们一起看看 Predicates。`
 
 **Predicates 在调度过程中的作用，可以理解为 Filter，**即：它按照调度策略，从当前集群的所有节点中，“过滤”出一系列符合条件的节点。这些节点，都是可以运行待调度 Pod 的宿主机。
