--- a/blogs/source/_posts/reference/k8s/44.Kubernetes GPU管理与Device Plugin机制.md
+++ b/blogs/source/_posts/reference/k8s/44.Kubernetes GPU管理与Device Plugin机制.md
@@ -11,7 +11,7 @@ categories:
 ## Kubernetes GPU管理与Device Plugin机制
 
 2016 年，随着 AlphaGo 的走红和 TensorFlow 项目的异军突起，一场名为 AI 的技术革命迅速从学术界蔓延到了工业界，所谓的 AI 元年，就此拉开帷幕。
-
+<!-- more -->
 当然，机器学习或者说人工智能，并不是什么新鲜的概念。而这次热潮的背后，云计算服务的普及与成熟，以及算力的巨大提升，其实正是将人工智能从象牙塔带到工业界的一个重要推手。
 
 而与之相对应的，从 2016 年开始，Kubernetes 社区就不断收到来自不同渠道的大量诉求，希望能够在 Kubernetes 集群上运行 TensorFlow 等机器学习框架所创建的训练（Training）和服务（Serving）任务。而这些诉求中，除了前面我为你讲解过的 Job、Operator 等离线作业管理需要用到的编排概念之外，还有一个亟待实现的功能，就是对 GPU 等硬件加速设备管理的支持。
