--- a/blogs/source/_posts/reference/k8s/45.幕后英雄：SIG-Node与CRI.md
+++ b/blogs/source/_posts/reference/k8s/45.幕后英雄：SIG-Node与CRI.md
@@ -11,7 +11,7 @@ categories:
 ## 幕后英雄：SIG-Node与CRI
 
 在前面的文章中，我为你详细讲解了关于 Kubernetes 调度和资源管理相关的内容。实际上，在调度这一步完成后，Kubernetes 就需要负责将这个调度成功的 Pod，在宿主机上创建出来，并把它所定义的各个容器启动起来。这些，都是 kubelet 这个核心组件的主要功能。
-
+<!-- more -->
 在接下来三篇文章中，我就深入到 kubelet 里面，为你详细剖析一下 Kubernetes 对容器运行时的管理能力。
 
 在 Kubernetes 社区里，与 kubelet 以及容器运行时管理相关的内容，都属于 SIG-Node 的范畴。如果你经常参与社区的话，你可能会觉得，相比于其他每天都热闹非凡的 SIG 小组，SIG-Node 是 Kubernetes 里相对沉寂也不太发声的一个小组，小组里的成员也很少在外面公开宣讲。
