--- a/blogs/source/_posts/reference/k8s/54.特别放送.基于 Kubernetes 的云原生应用管理，到底应该怎么做.md
+++ b/blogs/source/_posts/reference/k8s/54.特别放送.基于 Kubernetes 的云原生应用管理，到底应该怎么做.md
@@ -11,7 +11,7 @@ categories:
 ## 特别放送 | 基于 Kubernetes 的云原生应用管理，到底应该怎么做？
 
 虽然《深入剖析 Kubernetes》专栏已经完结了一段时间了，但是在留言中，很多同学依然在不时地推敲与消化专栏里的知识和案例。对此我非常开心，同时也看到大家在实践 Kubernetes 的过程中存在的很多问题。所以在接下来的一段时间里，我会以 Kubernetes 最为重要的一个主线能力作为专题，对专栏内容从广度和深度两个方向上进行一系列延伸与拓展。希望这些内容，能够帮助你在探索这个全世界最受欢迎的开源生态的过程中，更加深刻地理解到 Kubernetes 项目的内涵与本质。
-
+<!-- more -->
 随着 Kubernetes 项目的日趋成熟与稳定，越来越多的人都在问我这样一个问题：现在的 Kubernetes 项目里，最有价值的部分到底是哪些呢？
 
 为了回答这个问题，我们不妨一起回到第 13 篇文章《为什么我们需要 Pod？》中，来看一下几个非常典型的用户提问。
